[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
axum-extra = { version = "0.9", features = ["typed-header"] }
reqwest = "*"
jsonwebtoken = "*"
once_cell = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version ="*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
pretty_env_logger = "*"
env_logger = "*"
config = "*"
toml = "*"
log = "*"
sqlx = {version="*",features = ["runtime-tokio-rustls","sqlite"]}